[package]
name = "cbitmap"
version = "0.1.1"
edition = "2021"
license = "MIT"

description = "A conventional, compact and core (no_std) bitmap."
readme = "README.md"
authors = ["Halifuda"]
keywords = ["bitmap", "bitset", "bitarray"]
categories = ["no-std"]
repository = "https://github.com/Halifuda/cbitmap"
documentation = "https://docs.rs/cbitmap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "bitmap-base"

[[test]]
name = "bitmap-base"