[package]
name = "cbitmap"
version = "0.3.1"
edition = "2021"
license = "MIT"

description = "A conventional, compact and core (no_std) bitmap."
readme = "README.md"
authors = ["Halifuda"]
keywords = ["bitmap", "bitset", "bitarray"]
categories = ["no-std"]
repository = "https://github.com/Halifuda/cbitmap"
documentation = "https://docs.rs/cbitmap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false # ignoring libtest check, so criterion cmd options can be used.

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[example]]
name = "bitmap-base"

[[test]]
name = "bitmap-base"

[[test]]
name = "bitmap-panic"

[[bench]]
name = "bitmap-base"
harness = false